# MessageFactoryExample

./: .gitignore  CMakeLists.txt  README.md  build.sh
Message/: CMakeLists.txt
Message/include/: KeepAlive.hpp  MessageFactory.hpp  Register.hpp  StatusUpdate.hpp
Message/src/: MessageFactory.cpp
include/: IMessage.hpp  MessageType.hpp  Register.hpp  UnknownMessage.hpp
src/: KeepAlive.cpp  StatusUpdate.cpp  UnknownMessage.cpp  main.cpp
